# wikisearch

./: .gitignore  Cargo.toml  Readme.md  WikitextGrammar.md
.helix/: recent-files.txt
resources/: config.json  tokenizer.json
src/: embedder.rs  main.rs  mediawiki.rs  search_db.rs  wiki_parser.rs  wikitext.rs
