[package]
name = "wikisearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-core = "0.5.2"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
qdrant-client = "1.14.0"
reqwest = { version = "0.12.18", features = ["json"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tonic = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
